# XII-Graphics

./: .clang-format  .editorconfig  .gitattributes  .gitignore  LICENSE  README.md
BuildSystem/CMake/: FindDirectX11.cmake  FindDirectX12.cmake  FindXIIVulkan.cmake
BuildSystem/CMake/CMakeUtils/: xiiUtilsD3D11.cmake  xiiUtilsD3D12.cmake  xiiUtilsRenderer.cmake  xiiUtilsVulkan.cmake
Engine/GraphicsD3D11/: CMakeLists.txt  GraphicsD3D11DLL.h  GraphicsD3D11PCH.cpp  GraphicsD3D11PCH.h  Startup.cpp
Engine/GraphicsD3D11/CommandEncoder/: CommandListD3D11.h  CommandQueueD3D11.h
Engine/GraphicsD3D11/Device/: DeviceD3D11.h  SwapChainD3D11.h
Engine/GraphicsD3D11/Resources/: BottomLevelASD3D11.h  BufferD3D11.h  BufferViewD3D11.h  DisjointQueryPool.h  FenceD3D11.h  FramebufferD3D11.h  QueryD3D11.h  RenderPassD3D11.h  SamplerD3D11.h  TextureD3D11.h  (+2 more)
Engine/GraphicsFoundation/: CMakeLists.txt  GraphicsFoundationDLL.h  GraphicsFoundationPCH.cpp
Engine/GraphicsNull/: CMakeLists.txt  GraphicsNullDLL.h  GraphicsNullPCH.cpp
Engine/ShaderCompiler/: CMakeLists.txt  ShaderCompiler.h  ShaderCompilerDLL.h  ShaderCompilerPCH.cpp  ShaderCompilerPCH.h  finalize.cmake
Engine/ShaderCompiler/Implementation/: ShaderCompiler.cpp
Engine/ShaderCompiler/Implementation/D3D/: ShaderCompilerD3D11.h  ShaderCompilerD3D12.h
Engine/ShaderCompiler/Implementation/D3D/Implementation/: ShaderCompilerD3D11.cpp  ShaderCompilerD3D12.cpp
Engine/ShaderCompiler/Implementation/Vulkan/: ShaderCompilerVulkan.h
Engine/ShaderCompiler/Implementation/Vulkan/Implementation/: ShaderCompilerVulkan.cpp
(+206 files in other folders)
